--- a/client/src/components/Header/styles.css
+++ b/client/src/components/Header/styles.css
@@ -2,80 +2,114 @@
   position: fixed;
   top: 0;
   left: 0;
+
   width: 100%;
-  height: 100px;
+  height: 80px;
 
-  background: linear-gradient(to right, #99661f, #1a1104ce, #1a1104ce);
+  background: #353b48;
 
   display: inline-flex;
-  padding: 0px 5%;
-  justify-content: space-between;
+  align-items: center;
+
+  padding-right: 0px 2%;
+}
+
+.header-container .half {
+  display: inline-flex;
+
+  width: 50%;
+  height: 100%;
+}
+
+.header-container #half1 {
   align-items: center;
 }
 
-.header-container .logo {
-  cursor: pointer;
+.header-container #half1 .logo-container {
+  transition: .55s;
 
-  user-select: none;
-}
+  height: 100%;
 
-.header-container ul {
-  display: inline-flex;
-  justify-content: space-between;
+  display: flex;
+  justify-content: center;
   align-items: center;
-
-  margin-left: 20%;
-
-  list-style: none;
-}
-
-.header-container ul li {
-  margin: 0px 15%;
-
-  font-family: Arial, Helvetica, sans-serif;
-  font-weight: bold;
-  font-size: 21px;
-  color: #aaa69d;
+  width: 12%;
+  border-top-right-radius: 100px;
+  border-bottom-right-radius: 100px;
 
   cursor: pointer;
-  user-select: none;
-
-  transition: .4s;
 }
 
-.header-container ul li:hover {
-  font-size: 23px;
-
-  border-bottom: 1.6px solid #84817a;
-}
-
-.header-container .profile-button {
-  border: 2.2px solid #84817a;
-
+.header-container #half1 .logo-container img {
   height: 60px;
-  width: 60px;
+
+  transition: .55s;
+}
+
+.header-container #half1 #search-box {
+  margin-left: 9%;
+  height: 50px;
+
+  transition: .5s;
+} 
+
+.header-container #half1 .search-box-unselected {
+
+  border: 1.8px solid #b9c3d0;
+
+  width: 50px;
 
   display: flex;
   justify-content: center;
   align-items: center;
 
-  font-size: 30px;
-  color: #84817a;
-
-  border-radius: 50%;
-
+  border-radius: 500px;
+  
   cursor: pointer;
+}
+
+.header-container #half1 .search-box-unselected:hover {
+  background: #b9c3d034;
+}
+
+.header-container #half1 .search-box-selected {
+  padding-right: 2.5%;
+
+  border: 1.8px solid #b9c3d0;
+  
+  background: #b9c3d070;
+  width: 42%;
+
+  display: inline-flex;
+  justify-content: space-between;
+  align-items: center;
+
+  border-radius: 50px;
+}
+
+.header-container #half1 .search-box-selected .icon {
+  margin-left: 17.5px;
+}
+
+.header-container #half1 .search-box-selected input {
+  width: 85%;
+  height: 60%;
+
+  padding: 0px 2%;
+
+  font-family: 'Roboto', sans-serif;
+  font-size: 13px;
+  text-decoration: none;
+
+  background: none;
+  border: none;
+  border-bottom: 1.7px solid #353b4896;
+
   outline: none;
-
-  transition: .4s;
 }
 
-.header-container .profile-button:hover {
-  border-color: #aaa69d;
-
-  font-size: 32px;
-
-  height: 65px;
-  width: 65px;
+.header-container #half2 .item1 {
+  border-width: 1.2px 1.2px 0 0;
+  border-style: solid;
+  border-color: #000;
 }
-
