--- a/client/src/components/Header/styles.css
+++ b/client/src/components/Header/styles.css
@@ -92,10 +92,15 @@
   margin-left: 17.5px;
 }
 
-.header-container #half1 .search-box-selected input {
+.header-container #half1 .search-box-selected form {
   width: 85%;
   min-width: 125px;
   height: 60%;
+}
+
+.header-container #half1 .search-box-selected input {
+  width: 100%;
+  height: 100%;
 
   padding: 0px 2%;
 
@@ -113,9 +118,9 @@
 .header-container #half2 {
   align-items: center;
   width: 50%;
-  min-width: 380px;
+  min-width: 580px;
   padding-left: 8%;
-  padding-right: 10%;
+  padding-right: 3.5%;
   justify-content: space-between;
 }
 
@@ -187,5 +192,32 @@
 }
 
 .header-container #half2 .profile-button:hover {
+  background: #b9c3d034;
+}
+
+.header-container #half2 .profile-button-logged {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  font-family: 'Roboto', sans-serif;
+  font-weight: 500;
+  color: #b9c3d0;
+
+  padding: 11px 12px;
+  
+  border: 1.8px solid #b9c3d0;
+  border-radius: 50px;
+
+  cursor: pointer;
+  transform: translateX(28px);
+  transition: .4s;
+}
+
+.header-container #half2 .profile-button-logged span {
+  margin-right: 10px;
+}
+
+.header-container #half2 .profile-button-logged:hover {
   background: #b9c3d034;
 }
