--- a/client/src/pages/Home/styles.css
+++ b/client/src/pages/Home/styles.css
@@ -6,7 +6,7 @@
   margin-top: 80px;
 
   height: 600px;
-  width: 100%;
+  min-width: 100%;
 
   background: linear-gradient(to right, #101435, #101a64,#1a2caa);
 }
@@ -35,4 +35,49 @@
   font-size: 22px;
   width: 45%;
   min-width: 200px;
+}
+
+.search-filtered-section {
+  position: relative;
+  left: 50%;
+  transform: translateX(-50%);
+
+  padding: 80px 130px;
+  margin: 90px 0px;
+
+  background: #bfbfbf4b;
+  border-radius: 14px;
+
+  width: 64%;
+  min-width: 680px;
+}
+
+.select-page {
+  width: 100%;
+
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+
+  margin: 80px 0;
+}
+
+.select-page button {
+  margin: 0px 14px;
+  padding: 6.8px 10.8px;
+
+  border: none;
+  border: 1.6px solid #000;
+  background: #bcbcbc7c;
+  border-radius: 6px;
+
+  cursor: pointer;
+  outline: none;
+}
+
+.select-page .selected {
+  padding: 8px 12px;
+  border: none;
+
+  background: #bcbcbc;
 }
