--- a/client/src/Main.css
+++ b/client/src/Main.css
@@ -31,6 +31,50 @@ body {
   user-select: none;
 }
 
+.form-container .box-container {
+  position: absolute;
+
+  height: 62%;
+  min-height: 620px;
+  width: 25%;
+  min-width: 320px;
+
+  padding: 18px 25px;
+  
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+  align-items: center;
+
+  background: #bcbcbcc9;
+}
+
+.form-container .box-container img {
+  width: 90px;
+  user-select: none;
+}
+
+.title-section {
+  padding: 4px 10px;
+  margin-top: 28px;
+  margin-bottom: 30px;
+  text-align: center;
+
+  font-family: 'Ubuntu', sans-serif;
+  font-size: 16px;
+  font-weight: bold;
+  text-decoration: none;
+  color: #0e161f;
+
+  background: #586572;
+  border-radius: 25px;
+
+  width: 20%;
+  min-width: 120px;
+
+  transition: .5s;
+}
+
 .status {
   font-family: 'Ubuntu', sans-serif;
   white-space: nowrap;
