--- a/client/src/components/ApiContainer/styles.css
+++ b/client/src/components/ApiContainer/styles.css
@@ -1,30 +1,42 @@
 .api-container {
   width: 100%;
-  min-width: 620px;
-  min-height: 280px;
+  min-width: 360px;
+  min-height: 180px;
 
-  padding: 30px 80px;
+  padding: 14px 40px;
+  padding-bottom: 28px;
   margin: 50px 0;
 
   border-radius: 15px;
 
   background: #bfbfbf;
+  transition: .4s;
+  cursor: pointer;
+}
+
+.api-container:hover {
+  background: #dfdfdf;
+}
+
+.api-container .title {
+  width: fit-content;
 }
 
 .api-container .title h1 {
   padding: 8px 22px;
-  min-width: 280px;
 
   font-family: 'Roboto', sans-serif;
-  font-size: 20px;
+  font-size: 16px;
   color: #353b48;
 
   border: 1.3px solid #353b48;
+  background: rgba(255, 255, 255, .4);
   border-radius: 8px;
 }
 
 .api-container .title h3 {
   font-family: 'Ubuntu', sans-serif;
+  font-size: 12px;
   color: #353b48;
 
   white-space: nowrap;
@@ -41,35 +53,41 @@
   margin: 9px 0;
 }
 
-.api-container .likesandviews {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+.api-container .section section {
+  width: 100%;
+
+  display: inline-flex;
+  justify-content: space-between;
   align-items: center;
 }
 
-.api-container .likesandviews div {
+.api-container .likes,
+.api-container .views {
   display: flex;
   align-items: center;
   justify-content: center;
 
-  margin: 12px 0;
+  margin-left: 18px;
+
+  transform: translateY(13px);
 }
 
-.api-container .likesandviews div span {
+.api-container .likes span,
+.api-container .views span {
   margin-left: 8px;
 }
 
 .api-container .section-2 p {
   font-family: 'Roboto', sans-serif;
   padding: 8px 22px;
-  width: 40;
-  margin-right: 25px;
+  width: 80%;
 
   font-family: 'Roboto', sans-serif;
+  font-size: 10.8px;
   font-weight: 500;
   color: #353b48;
 
   border: 1.3px solid #353b48;
+  background: rgba(255, 255, 255, .4);
   border-radius: 8px;
 }
