--- a/client/src/pages/Home/styles.css
+++ b/client/src/pages/Home/styles.css
@@ -1,18 +1,41 @@
 .blue-section {
   display: inline-flex;
-  align-items: center;
+  justify-content: space-between;
 
-  padding: 0 4%;
+  padding-left: 4%;
   margin-top: 80px;
 
   height: 600px;
   min-width: 100%;
 
   background: linear-gradient(to right, #101435, #101a64,#1a2caa);
+  background-clip: border-box;
 }
 
-.blue-section img {
+.blue-section .content {
+  display: inline-flex;
+  align-items: center;
+  z-index: 2;
+
+  width: 50%;
+}
+
+.blue-section .logo-home {
   height: 420px;
+  margin: 0px 29px;
+  z-index: 2;
+}
+
+.blue-section .background {
+  width: 96%;
+  height: 600px;
+  text-align: end;
+  position: absolute;
+  z-index: -1;
+}
+
+.blue-section .background .bg-decoration {
+  height: 600px;
 }
 
 .blue-section .text-box {
@@ -33,51 +56,25 @@
   text-shadow: 4px 4px 8px rgba(0, 0, 0, .45);
 
   font-size: 22px;
-  width: 45%;
+  width: 100%;
   min-width: 200px;
 }
 
-.search-filtered-section {
+.main-homepage {
+  padding: 50px 0px;
+}
+
+.main-homepage .select-api {
   position: relative;
   left: 50%;
   transform: translateX(-50%);
 
-  padding: 80px 130px;
-  margin: 90px 0px;
+  width: 70%;
+  min-width: 500px;
+  max-width: 1200px;
+  padding: 40px 80px;
 
-  background: #bfbfbf4b;
-  border-radius: 14px;
-
-  width: 64%;
-  min-width: 680px;
-}
-
-.select-page {
-  width: 100%;
-
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
-
-  margin: 80px 0;
-}
-
-.select-page button {
-  margin: 0px 14px;
-  padding: 6.8px 10.8px;
-
-  border: none;
-  border: 1.6px solid #000;
-  background: #bcbcbc7c;
-  border-radius: 6px;
-
-  cursor: pointer;
-  outline: none;
-}
-
-.select-page .selected {
-  padding: 8px 12px;
-  border: none;
-
+  border-radius: 18px;
+  box-shadow: -8px 12px 20px rgba(0, 0, 0, .4);
   background: #bcbcbc;
 }
