--- a/client/src/pages/Register/styles.css
+++ b/client/src/pages/Register/styles.css
@@ -1,70 +1,23 @@
-.register .register-container {
-  position: absolute;
-
-  height: 62%;
-  min-height: 560px;
-  width: 25%;
-  min-width: 320px;
-
-  padding: 18px 25px;
-  
-  display: flex;
-  flex: 1;
-  flex-direction: column;
-  align-items: center;
-
-  background: #bcbcbcc9;
-}
-
-.register .register-container img {
-  width: 90px;
-  user-select: none;
-}
-
-.register .register-container .go-to-login {
-  padding: 4px 10px;
-  margin-top: 28px;
-  margin-bottom: 15px;
-  text-align: center;
-
-  font-family: 'Roboto', sans-serif;
-  font-size: 16px;
-  font-weight: 500;
-  text-decoration: none;
-  color: #bcbcbc;
-
-  background: #000;
-  border-radius: 25px;
-
-  width: 20%;
-  min-width: 120px;
-
-  transition: .5s;
-}
-.register .register-container .go-to-login:hover {
-  color: #fff;
-}
-
-.register .register-container .status {
+.register .box-container .status {
   margin-bottom: 18px;
 }
 
-.register .register-container .name,
-.register .register-container .email {
+.register .box-container .name,
+.register .box-container .email {
   width: 85%;
 }
-.register .register-container .input-box {
+.register .box-container .input-box {
   display: inline-flex;
   justify-content: space-between;
   width: 85%;
 }
-.register .register-container .input-box input {
+.register .box-container .input-box input {
   width: 47%;
 
   font-size: 14px;
 }
 
-.register .register-container input {
+.register .box-container input {
   padding: 8px 25px;
   margin-bottom: 38px;
   
@@ -79,7 +32,7 @@
   text-decoration: none;
 }
 
-.register .register-container .select-country {
+.register .box-container .select-country {
   width: 85%;
 
   padding: 8px 25px;
@@ -94,7 +47,7 @@
   outline: none;
 }
 
-.register .register-container button {
+.register .box-container button {
   padding: 6px 12px;
   text-align: center;
 
@@ -114,6 +67,23 @@
   transition: .5s;
   cursor: pointer;
 }
-.register .register-container button:hover {
+.register .box-container button:hover {
   color: #fff;
+}
+
+.register .box-container .login-link {
+  font-family: 'Ubuntu', sans-serif;
+  font-size: 13px;
+  font-weight: bold;
+  text-decoration: none;
+  color: #000;
+
+  padding: 3px 9px;
+  margin-top: 24px;
+
+  white-space: nowrap;
+}
+
+.register .box-container .login-link:hover {
+  border-bottom: 1.2px solid #000;
 }
