--- a/client/src/components/ApiContainer/styles.css
+++ b/client/src/components/ApiContainer/styles.css
@@ -1,93 +1,112 @@
 .api-container {
   width: 100%;
-  min-width: 360px;
-  min-height: 180px;
+  min-width: 510px;
+  height: 320px;
 
-  padding: 14px 40px;
-  padding-bottom: 28px;
-  margin: 50px 0;
+  margin: 40px 0px;
 
-  border-radius: 15px;
+  padding: 35px 45px;
 
-  background: #bfbfbf;
-  transition: .4s;
-  cursor: pointer;
-}
+  background: #0a1625;
 
-.api-container:hover {
-  background: #dfdfdf;
-}
-
-.api-container .title {
-  width: fit-content;
-}
-
-.api-container .title h1 {
-  padding: 8px 22px;
-
-  font-family: 'Roboto', sans-serif;
-  font-size: 16px;
-  color: #353b48;
-
-  border: 1.3px solid #353b48;
-  background: rgba(255, 255, 255, .4);
   border-radius: 8px;
-}
-
-.api-container .title h3 {
-  font-family: 'Ubuntu', sans-serif;
-  font-size: 12px;
-  color: #353b48;
-
-  white-space: nowrap;
-
-  padding: 8px 22px;
 }
 
 .api-container .section {
   width: 100%;
   display: inline-flex;
-  justify-content: space-between;
-  align-items: center;
 
-  margin: 9px 0;
+  justify-content: space-between;
 }
 
-.api-container .section section {
-  width: 100%;
+.api-container .first-section .api-name,
+.api-container .first-section .creator-name,
+.api-container .second-section section .api-country {
+  display: inline-flex;
+  transform: skew(-25deg);
 
+  padding: 13px 18px;
+  margin: 0px 10px;
+
+  white-space: nowrap;
+
+  background: #14283b;
+}
+
+@media screen and (max-width: 1060px) {
+  .api-container .title,
+  .api-container p {
+    transform: skew(25deg);
+    font-size: 13px;
+    transition: .25s;
+  }
+}
+
+.api-container .title {
+  font-family: 'Ubuntu', sans-serif;
+
+  color: #9cbcdc;
+  margin-right: 12px;
+}
+
+.api-container p {
+  font-family: 'Roboto';
+  font-weight: 500;
+  color: #9cbcdc;
+}
+
+.api-container .title,
+.api-container p {
+  transform: skew(25deg);
+  transition: .25s;
+}
+
+.api-container .second-section {
+  margin-top: 58px;
+}
+
+.api-container .second-section .description {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  width: 260px;
+  height: 130px;
+  padding: 0px 19px;
+
+  font-size: 16px;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 500;
+  color: #0a1625;
+
+  background: #9cbcdc;
+  border-radius: 4px;
+}
+
+.api-container .second-section section {
+  width: 50%;
+  height: fit-content;
+  padding: 0px 18px;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.api-container .second-section .viewsAndLikes {
+  display: inline-flex;
+  justify-content: space-between;
+
+  width: 100%;
+  padding: 0px 50px;
+  margin-top: 40px;
+}
+
+.api-container .second-section .viewsAndLikes span {
   display: inline-flex;
   justify-content: space-between;
   align-items: center;
-}
+  width: 40px;
 
-.api-container .likes,
-.api-container .views {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-
-  margin-left: 18px;
-
-  transform: translateY(13px);
-}
-
-.api-container .likes span,
-.api-container .views span {
-  margin-left: 8px;
-}
-
-.api-container .section-2 p {
-  font-family: 'Roboto', sans-serif;
-  padding: 8px 22px;
-  width: 80%;
-
-  font-family: 'Roboto', sans-serif;
-  font-size: 10.8px;
-  font-weight: 500;
-  color: #353b48;
-
-  border: 1.3px solid #353b48;
-  background: rgba(255, 255, 255, .4);
-  border-radius: 8px;
+  color: #9cbcdc;
 }
