--- a/client/src/pages/ForgotPassword/AuthCode/styles.css
+++ b/client/src/pages/ForgotPassword/AuthCode/styles.css
@@ -6,6 +6,15 @@
   margin: 30px 0 19px 0;
 }
 
+.cp-container h6 {
+  font-family: 'Ubuntu', sans-serif;
+  font-weight: bold;
+
+  margin: 8px 0px;
+
+  margin-bottom: 18px;
+}
+
 .cp-container form .code-input {
   display: inline-flex;
   justify-content: space-between;
