Client: Add LatoWght300 & RobotoWght700 & Add Terms and Conditions, Privacy Policy pages & Add Footer Component & Add resend email function on authCode page & add useCheckLogged to verify if user is logged to not be able to enter on login or register page & Add first half of logged profile page. Server: add indexByIds function and route on apiController & implement transaction on incrementView on apiController & add score service based on likes and views & create a resendEmail service on serviceController & Add follow and unfollow function on userController & add followers, following and score columns in users table schema & change SMTP host to sendinblue

--- a/client/src/components/ApiContainer/styles.css
+++ b/client/src/components/ApiContainer/styles.css
@@ -114,3 +114,15 @@
 .api-container .second-section .viewsAndLikes .selected {
   background: #d63031;
 }
+
+.api-container .clickable {
+  cursor: pointer;
+
+  overflow: hidden;
+
+  transition: .4s;
+}
+
+.api-container .clickable:hover {
+  background: #1a4166;
+}
