--- a/client/src/pages/Register/styles.css
+++ b/client/src/pages/Register/styles.css
@@ -19,7 +19,7 @@
 
 .register .box-container input {
   padding: 8px 25px;
-  margin-bottom: 38px;
+  margin-bottom: 28px;
   
   border: none;
   border-radius: 22px;
@@ -36,7 +36,7 @@
   width: 85%;
 
   padding: 8px 25px;
-  margin-bottom: 38px;
+  margin-bottom: 28px;
 
   border-radius: 22px;
 
@@ -86,4 +86,37 @@
 
 .register .box-container .login-link:hover {
   border-bottom: 1.2px solid #000;
+}
+
+.register .box-container .checkbox-section {
+  display: inline-flex;
+  justify-content: center;
+
+  width: 97%;
+
+  position: relative;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.register .box-container .checkbox-section input {
+  margin-right: 5px;
+
+  cursor: pointer;
+}
+
+.register .box-container .checkbox-section span {
+  font-family: 'Roboto', sans-serif;
+  font-weight: 500;
+  font-size: 12px;
+}
+
+.register .box-container .checkbox-section span a {
+  font-family: 'Ubuntu', sans-serif;
+  font-size: 13px;
+  font-weight: bold;
+  text-decoration: none;
+  color: #000;
+
+  white-space: nowrap;
 }
