Client: Add FAQ Page to routes.tsx & Add user_api adapter to ApiContainer.tsx & Add Logout button to header.tsx & Add second section with user's apis to profile page. Server: Remove format validation to api_ids string on indexByIds function to apiController & Add logged boolean property to jwt when logged or registered

--- a/client/src/pages/ForgotPassword/AuthCode/styles.css
+++ b/client/src/pages/ForgotPassword/AuthCode/styles.css
@@ -25,7 +25,7 @@
   max-width: 100%;
 }
 
-.cp-container form .code-input div {
+.cp-container form .code-input label {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -39,7 +39,7 @@
   cursor: text;
 }
 
-.cp-container form .code-input div input {
+.cp-container form .code-input label input {
   max-width: 40%;
   min-height: 60px;
 
