--- a/client/src/components/ApiContainer/styles.css
+++ b/client/src/components/ApiContainer/styles.css
@@ -1,6 +1,7 @@
 .api-container {
   width: 100%;
-  min-width: 510px;
+  min-width: 520px;
+  max-width: 700px;
   height: 320px;
 
   margin: 40px 0px;
@@ -27,6 +28,7 @@
 
   padding: 13px 18px;
   margin: 0px 10px;
+  width: fit-content;
 
   white-space: nowrap;
 
@@ -91,6 +93,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: flex-end;
 }
 
 .api-container .second-section .viewsAndLikes {
