--- a/client/src/components/Header/styles.css
+++ b/client/src/components/Header/styles.css
@@ -22,7 +22,7 @@
 }
 
 .header-container #half1 {
-  width: 60%;
+  width: 47%;
   min-width: 320px;
 }
 
@@ -118,8 +118,8 @@
 
 .header-container #half2 {
   align-items: center;
-  width: 50%;
-  min-width: 580px;
+  width: 53%;
+  min-width: 680px;
   padding-left: 8%;
   padding-right: 3.5%;
   justify-content: space-between;
@@ -152,7 +152,7 @@
 .header-container #half2 .item:hover {
   background: rgba(255, 255, 255, .6);
 
-  min-width: 50%;
+  min-width: 41%;
 }
 
 .header-container #half2 .item2 {
@@ -181,6 +181,7 @@
 
   width: 50px;
   height: 50px;
+  margin-right: 18px;
 
   display: flex;
   justify-content: center;
@@ -212,7 +213,8 @@
 
   cursor: pointer;
   transform: translateX(28px);
-  transition: .4s;
+
+  transition: background .4s;
 }
 
 .header-container #half2 .profile-button-logged span {
@@ -220,5 +222,19 @@
 }
 
 .header-container #half2 .profile-button-logged:hover {
-  background: #b9c3d034;
+  background: #b9c3d03a;
+}
+
+.header-container #half2 .loggout-button {
+  margin-left: 18px;
+
+  background: none;
+  border: none;
+  color: #B9C3D0;
+
+  font-weight: 600;
+  font-size: 20px;
+
+  cursor: pointer;
+  outline: none;
 }
