--- a/client/src/pages/Home/styles.css
+++ b/client/src/pages/Home/styles.css
@@ -1,4 +1,5 @@
 .blue-section {
+  position: relative;
   display: inline-flex;
   justify-content: space-between;
 
@@ -10,6 +11,8 @@
 
   background: linear-gradient(to right, #101435, #101a64,#1a2caa);
   background-clip: border-box;
+
+  overflow: hidden;
 }
 
 .blue-section .content {
