--- a/client/src/pages/Profile/styles.css
+++ b/client/src/pages/Profile/styles.css
@@ -147,7 +147,8 @@
     z-index: -1111;
 }
 
-.profile-container .second-section-main .background-color {
+.profile-container .second-section-main section::before {
+    content: '';
     width: 100%;
     height: 100%;
 
@@ -156,6 +157,13 @@
     left: 0;
 
     z-index: -1112;
+}
+
+.profile-container .second-section-main .first-box::before {
+    background-color: #000e20;
+}
+.profile-container .second-section-main .second-box::before {
+    background-color: #0c5b83;
 }
 
 .profile-container .second-section-main .title-section-profile {
