--- a/client/src/pages/Profile/styles.css
+++ b/client/src/pages/Profile/styles.css
@@ -129,10 +129,8 @@
 
 .profile-container .second-section-main .scrollable-div {
     height: 100%;
-    padding: 0px 40px;
-
-    overflow: hidden;
-    overflow-y: scroll;
+    width: 100%;
+    padding: 0 90px 0 80px;
 }
 
 .profile-container .second-section-main .bg {
